// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DOM structure matches snapshot 1`] = `
<div>
  <div
    class="min-h-screen min-w-[100vw]"
  >
    <form
      action=""
      method=""
      role="form"
    >
      <h1>
        Log In.
      </h1>
      <div>
        <label
          aria-label="username input"
          for="username"
          role="user-label"
        />
        <input
          name="username"
          placeholder="Username ex. Joe123"
          required=""
          type="text"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`render of Form 1`] = `
<form
  action=""
  method=""
  role="form"
>
  <h1>
    Log In.
  </h1>
  <div>
    <label
      aria-label="username input"
      for="username"
      role="user-label"
    />
    <input
      name="username"
      placeholder="Username ex. Joe123"
      required=""
      type="text"
    />
  </div>
</form>
`;
